--- a/rayweb/_config.yml
+++ b/rayweb/_config.yml
@@ -13,16 +13,14 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
+title: Ray Gonzales
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Portfolio website for Ray Gonzales. A Product, UX, UI, you-name-it designer passionate about crafting thoughtful and engaging experiences that help users achieve more. 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: designedbinary
+github_username:  designedbinary
 
 # Build settings
 markdown: kramdown
@@ -40,14 +38,14 @@ defaults: #frontmatter defaults
     path: "_posts/explorations" #template for all explorations
     type: "posts"
   values:
-    layout: "default"
+    layout: work
     categories: explorations
 -
   scope:
     path: "_posts/portfolio" #template for all portfolio items
     type: "posts"
   values:
-    layout: "default"
+    layout: work
     categories: work
 
 # Exclude from processing.
